<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_restaurante"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/res" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/hotel" />
        <item
            android:id="@+id/nav_lugares"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/lugares" />
    </group>


</menu>
